--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -75,7 +75,7 @@ es.io.host=192.168.50.3:8300
 es.io.cluster-name=bonc_docker
 
 #resource address
-resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
+#resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
 #cas.enable=true
