--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -65,9 +65,6 @@ nginxConf.io.serverAddr=yz.local:8081
 nginx.server.DMZ=dmz
 nginx.server.USER=user
 
-#resource address
-resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
-
 #yum_source
 yumConf.io.address=10.162.17.11
 
@@ -75,14 +72,17 @@ yumConf.io.address=10.162.17.11
 es.io.host=10.162.2.112:10300
 es.io.cluster-name=bonc_elk_DB
 
+#resource address
+resourceMmanage.address=http://10.161.35.65:1821/resreq/restlet/resourceArchive/showAllResource
+
 #cas sso
-cas.enable=false
-cas.server-logout-url=http://192.168.0.27:30004/cas/logout?service=http://132.35.227.90/portal/
+cas.enable=true
+cas.server-logout-url=http://10.161.35.65:1821/cas/logout?service=http://10.161.35.65:1821/portal/pure/Frame.action
 
 #cas client config
-cas.server-url-prefix=http://192.168.0.27:30004/cas
-cas.server-login-url=http://192.168.0.27:30004/cas/login
-cas.client-host-url=http://192.168.0.29:8080
+cas.server-url-prefix=http://10.161.35.65:1821/cas
+cas.server-login-url=http://10.161.35.65:1821/cas/login
+cas.client-host-url=http://10.162.17.13:30000
 
 #monitor
 monitor.url=http://10.162.16.116:30002
