+：添加分页基础类

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -109,4 +109,8 @@ ceph.name=admin
 ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
 ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
 
+#mem/cpu
 ratio.memtocpu=4
+
+# pageSize
+result.pager.page-size=10
