*：修改下载镜像和配置文件

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -20,8 +20,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=../codetemp
 #temp image file path()
 paas.image.path=../downimage
-#temp save image file path()
-paas.saveimage.path=/home/docker/paas/apache-tomcat-8.0.32/downimage/
 
 #ceph()
 ceph.ssh.url=10.162.17.13
@@ -39,11 +37,9 @@ docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://10.162.17.13:30002/v1/
 docker.io.nodeUrl=http://10.162.17.13:28015,http://10.162.16.123:28015,http://10.162.16.125:28015
 
-#docer ssh()
+#docker save image
 docker.image.url=10.162.17.13:30002
-docker.ssh.username=docker
-docker.ssh.password=Fut0_Za3_Aj5
-docker.ssh.address=10.162.17.13
+docker.image.cmdpath=docker save -o
 
 
 #kubernetes()
