修改yq配置文件

--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -46,11 +46,9 @@ docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://192.168.5.115:5000/v2/
 docker.io.nodeUrl=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192.168.0.28:28015,http://192.168.0.51:28015,http://192.168.0.52:28015,http://192.168.0.53:28015,
 
-#docer ssh()
+#docker save image
 docker.image.url=192.168.0.29:5000
-docker.ssh.username=paas
-docker.ssh.password=123456
-docker.ssh.address=192.168.0.29
+docker.image.cmdpath=sudo docker save -o
 
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.5.129:8080/
