--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,9 +25,9 @@ paas.codetemp.path=../codetemp
 paas.image.path=../downimage
 
 #ceph()
-ceph.ssh.url=192.168.0.29
-ceph.ssh.username=root
-ceph.ssh.password=root.123
+#ceph.ssh.url=127.0.0.1
+#ceph.ssh.username=root
+#ceph.ssh.password=123456
 ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
 
