*:重构下载镜像代码

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -42,7 +42,7 @@ docker.io.nodeUrl=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192
 
 #docker save image
 docker.image.url=192.168.0.29:5000
-docker.image.cmdpath=sudo docker save -o
+docker.image.cmdpath=docker save -o
 
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.0.20:8080/
