--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,7 +1,7 @@
 server.port:30000
 
 # datasource
-spring.datasource.url = jdbc:mysql://localhost:30001/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://10.162.17.13:30001/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123.bonc
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
