*:修改pom文件，添加了bonc sso client

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -71,29 +71,29 @@ es.io.host=192.168.50.3:8300
 es.io.cluster-name=bonc_docker
 
 #resource address
-#resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
-
-#cas sso
-#cas.enable=true
-#cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
-
-#cas client config
-#cas.server-url-prefix=http://132.35.227.90/cas
-#cas.server-login-url=http://132.35.227.90/cas/login
-#cas.client-host-url=http://192.168.73.2:8082
-
-
-#resource address
-resourceMmanage.address=http://192.168.0.174:8088/resreq/restlet/resourceArchive/showAllResource
+resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
 cas.enable=false
-cas.server-logout-url=http://192.168.0.174:8088/cas/logout?service=http://132.35.227.90/portal/
+cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
-cas.server-url-prefix=http://192.168.0.174:8088/cas
-cas.server-login-url=http://192.168.0.174:8088/cas/login
-cas.client-host-url=http://localhost:8082
+cas.server-url-prefix=http://132.35.227.90/cas
+cas.server-login-url=http://132.35.227.90/cas/login
+cas.client-host-url=http://10.0.93.226:8082
+
+
+#resource address
+#resourceMmanage.address=http://192.168.0.174:8088/resreq/restlet/resourceArchive/showAllResource
+
+#cas sso
+#cas.enable=false
+#cas.server-logout-url=http://192.168.0.174:8088/cas/logout?service=http://132.35.227.90/portal/
+
+#cas client config
+#cas.server-url-prefix=http://192.168.0.174:8088/cas
+#cas.server-login-url=http://192.168.0.174:8088/cas/login
+#cas.client-host-url=http://localhost:8082
 
 
 #monitor
