--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
 		</dependency>
 		<!-- <dependency> <groupId>net.unicon.cas</groupId> <artifactId>cas-client-autoconfig-support</artifactId> 
 			<version>1.1.0-GA</version> </dependency> -->
+        <dependency>
+            <groupId>com.bonc</groupId>
+            <artifactId>bonc-sso-client</artifactId>
+            <version>2.2.1</version>
+        </dependency>
 		<dependency>
 			<groupId>org.jasig.cas.client</groupId>
 			<artifactId>cas-client-core</artifactId>
@@ -157,9 +162,9 @@
 			<properties>
 				<profileActive>dev</profileActive>
 			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>	
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
 		</profile>
 		<profile>
 			<id>yq</id>
