--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,6 +30,7 @@ paas.image.path=../downimage
 #ceph.ssh.password=123456
 ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
+ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
 docker.io.url=http://192.168.0.29:28015
