--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 #spring.datasource.url = jdbc:mysql://132.35.227.90:3306/epm_docs?characterEncoding=utf-8&autoReconnect=true
 #spring.datasource.username = portal_docs
 #spring.datasource.password = bonc#*docs
@@ -74,13 +74,13 @@ es.io.cluster-name=bonc_docker
 resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
-cas.enable=false
+cas.enable=true
 cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
 cas.server-url-prefix=http://132.35.227.90/cas
 cas.server-login-url=http://132.35.227.90/cas/login
-cas.client-host-url=http://10.0.93.226:8082
+cas.client-host-url=http://localhost:8082
 
 
 #resource address
