--- a/src/main/resources/docker_registry_config.json
+++ b/src/main/resources/docker_registry_config.json
@@ -1,5 +1,5 @@
 {
-	"default.base_url" : "http://192.168.0.29:5000/",
+	"default.base_url" : "http://192.168.0.29:5000/v1/",
 	"default.user_name" : "192.168.0.29:5000",
 	"default.password" : "root"
 }
