*：修改登录验证码

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -108,3 +108,5 @@ ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
 ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
 
 ratio.memtocpu=4
+#login authcode
+login.showAuthCode=false
