--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+    <repositories>
+        <repository>
+            <id>bonc-public</id>
+            <name>bonc-public</name>
+            <url>http://code.bonc.com.cn/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
+    
 	<groupId>com.bonc.epm</groupId>
 	<artifactId>paas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
