--- a/pom.xml
+++ b/pom.xml
@@ -217,20 +217,20 @@
 	</dependencies>
 	<profiles>
 		<profile>
-			<id>dev</id>
-			<properties>
-				<profileActive>dev</profileActive>
-			</properties>
+            <id>dev</id>
+            <properties>
+                <profileActive>dev</profileActive>
+            </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-		</profile>
-		<profile>
-			<id>yq</id>
-			<properties>
-				<profileActive>yq</profileActive>
-			</properties>
-		</profile>
+        </profile>
+        <profile>
+            <id>prepare</id>
+            <properties>
+                <profileActive>prepare</profileActive>
+            </properties>
+        </profile>
 		<profile>
 			<id>profile</id>
 			<properties>
