--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://192.168.0.76:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
-#spring.datasource.url = jdbc:mysql://132.35.227.90:3306/epm_docs?characterEncoding=utf-8&autoReconnect=true
-#spring.datasource.username = portal_docs
-#spring.datasource.password = bonc#*docs
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -25,38 +22,36 @@ paas.codetemp.path=../codetemp
 paas.image.path=../downimage
 
 #ceph()
-#ceph.ssh.url=127.0.0.1
-#ceph.ssh.username=root
-#ceph.ssh.password=123456
-ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.mountexec=mount -t ceph 192.168.0.71:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
 ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
-docker.io.url=http://192.168.0.29:28015
+docker.io.url=http://192.168.0.76:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=192.168.0.29:5000
+docker.io.username=192.168.0.76:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://192.168.0.29:5000/v1/
-docker.io.nodeUrl=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192.168.0.28:28015,http://192.168.0.51:28015,http://192.168.0.52:28015,http://192.168.0.53:28015,
+docker.io.serverAddress=http://192.168.0.76:5000/v1/
+docker.io.nodeUrl=http://192.168.0.80:28015,http://192.168.0.81:28015,http://192.168.0.82:28015
 
 #docker save image
-docker.image.url=192.168.0.29:5000
+docker.image.url=192.168.0.76:5000
 docker.image.cmdpath=docker save -o
 
+
 #kubernetes()
-kubernetes.api.endpoint=http://192.168.0.20:8080/
-kubernetes.api.username=paas
-kubernetes.api.password=123456
-kubernetes.api.startport=30020
+kubernetes.api.endpoint=http://192.168.0.75:8080/
+kubernetes.api.username=root
+kubernetes.api.password=root.123
+kubernetes.api.startport=30400
 kubernetes.api.endport=32750
-kubernetes.api.address=192.168.0.20
+kubernetes.api.address=192.168.0.75
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
-nginxConf.io.confurl=http://192.168.0.40
+nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
 nginxConf.io.serverAddr=unicom.bonc.com
 
@@ -65,47 +60,33 @@ nginx.server.DMZ=dmz
 nginx.server.USER=user
 
 #yum_source
-yumConf.io.address=10.161.48.112
+yumConf.io.address=192.168.0.29
 
 #elasticsearch host
 es.io.host=192.168.50.3:8300
 es.io.cluster-name=bonc_docker
 
 #resource address
-resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
+resourceMmanage.address=http://192.168.0.78:32403/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
 cas.enable=false
-cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
+cas.server-logout-url=http://192.168.0.77:30004/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
-cas.server-url-prefix=http://132.35.227.90/cas
-cas.server-login-url=http://132.35.227.90/cas/login
-cas.client-host-url=http://localhost:8082
-
-
-#resource address
-#resourceMmanage.address=http://192.168.0.174:8088/resreq/restlet/resourceArchive/showAllResource
-
-#cas sso
-#cas.enable=false
-#cas.server-logout-url=http://192.168.0.174:8088/cas/logout?service=http://132.35.227.90/portal/
-
-#cas client config
-#cas.server-url-prefix=http://192.168.0.174:8088/cas
-#cas.server-login-url=http://192.168.0.174:8088/cas/login
-#cas.client-host-url=http://localhost:8082
-
+cas.server-url-prefix=http://192.168.0.77:30004/cas
+cas.server-login-url=http://192.168.0.77:30004/cas/login
+cas.client-host-url=localhost:8082
 
 #monitor
-monitor.url=http://192.168.0.26:30029
+monitor.url=http://192.168.0.80:30002
 monitor.username=root
 monitor.password=root.123
 monitor.dbName=k8s
 
 ceph.name=admin
-ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
-ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
+ceph.monitor=192.168.0.71:6789,192.168.0.72:6789,192.168.0.73:6789
+ceph.key=QVFCbzI3RlhWQWtWSWhBQWpoTC9sT1RFSGowb2U0VDR0Q0dWZlE9PQ==
 
 ratio.memtocpu=4
 #login authcode
