*:修改pom配置文件打包部分，修改服务升级 ，修改 单点admin登录

--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
                     <exclude>application.properties</exclude>
                     <exclude>application-dev.properties</exclude>
                     <exclude>application-profile.properties</exclude>
-                    <exclude>application-yq.properties</exclude>
+                    <exclude>application-prepare.properties</exclude>
                 </excludes>
             </resource>
             <resource>
