*：修改配置文件

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -70,7 +70,7 @@ es.io.cluster-name=bonc_docker
 resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
