--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -22,11 +22,9 @@ paas.codetemp.path=../codetemp
 paas.image.path=../downimage
 
 #ceph()
-ceph.ssh.url=10.162.17.13
-ceph.ssh.username=docker
-ceph.ssh.password=Fut0_Za3_Aj5
 ceph.ssh.mountexec=mount -t ceph 10.162.16.116:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
+ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
 docker.io.url=http://10.162.17.13:28015
