*：修改配置文件

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,13 +30,14 @@ ceph.ssh.mountpoint=/mnt/k8s/
 ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
-docker.io.url=http://192.168.0.76:28015
+docker.io.url=tcp://192.168.0.76:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=192.168.0.76:5000
+docker.io.apiVersion=1.21
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.76:5000/v1/
-docker.io.nodeUrl=http://192.168.0.80:28015,http://192.168.0.81:28015,http://192.168.0.82:28015
+docker.io.nodeUrl=tcp://192.168.0.80:28015,tcp://192.168.0.81:28015,tcp://192.168.0.82:28015
 
 #docker save image
 docker.image.url=192.168.0.76:5000
