--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -47,6 +47,10 @@ kubernetes.api.startport=30020
 kubernetes.api.endport=32750
 kubernetes.api.address=192.168.0.20
 
+#etcd
+etcd.client.url=http://192.168.0.26:2379
+etcd.client.domain=cluster.local
+
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
