--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -47,6 +47,10 @@ kubernetes.api.startport=30020
 kubernetes.api.endport=30600
 kubernetes.api.address=10.162.17.13
 
+#etcd
+etcd.client.url=http://10.162.16.123:2379
+etcd.client.domain=cluster.local
+
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
