--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,17 @@
 					<groupId>com.fasterxml.jackson.module</groupId>
 					<artifactId>jackson-module-jaxb-annotations</artifactId>
 				</exclusion>
+				<exclusion>
+				    <groupId>javax.ws.rs</groupId>
+				    <artifactId>javax.ws.rs-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
