*:修改cas和配置文件

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -27,13 +27,14 @@ ceph.ssh.mountpoint=/mnt/k8s/
 ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
-docker.io.url=http://10.162.17.13:28015
+docker.io.url=tcp://10.162.17.13:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=10.162.17.13:30002
+docker.io.apiVersion=1.21
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://10.162.17.13:30002/v1/
-docker.io.nodeUrl=http://10.162.17.13:28015,http://10.162.16.123:28015,http://10.162.16.125:28015
+docker.io.nodeUrl=tcp://10.162.17.13:28015,tcp://10.162.16.123:28015,tcp://10.162.16.125:28015
 
 #docker save image
 docker.image.url=10.162.17.13:30002
