--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,6 +48,9 @@ kubernetes.api.startport=30400
 kubernetes.api.endport=32750
 kubernetes.api.address=192.168.0.75
 
+#shera
+shera.api.endpoint=http://192.168.0.76:5000/v1/
+
 #etcd
 etcd.client.url=http://192.168.0.75:2379
 etcd.client.domain=cluster.local
