--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -48,6 +48,9 @@ kubernetes.api.startport=30020
 kubernetes.api.endport=30600
 kubernetes.api.address=10.162.17.13
 
+#shera
+shera.api.endpoint=http://192.168.0.76:5000/v1/
+
 #etcd
 etcd.client.url=http://10.162.16.123:2379
 etcd.client.domain=cluster.local
