*:修改shera和docker仓库API

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -36,6 +36,11 @@ docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.76:5000/v1/
 docker.io.nodeUrl=tcp://192.168.0.80:28015,tcp://192.168.0.81:28015,tcp://192.168.0.82:28015
 
+#docker registry()
+docker.registry.api.url=http://192.168.0.76:5000
+docker.registry.api.username=docker
+docker.registry.api.password=docker
+
 #docker save image
 docker.image.url=192.168.0.76:5000
 docker.image.cmdpath=docker save -o
