--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>javatar</groupId>
+            <artifactId>javatar</artifactId>
+            <version>2.5</version>
+        </dependency>
 	</dependencies>
 	<profiles>
 		<profile>
