*:修改配置文件 日志位置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=@profileActive@
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: 
 #logback
-logging.path=./logback/text
+logging.path=../logback/text
 # MULTIPART (MultipartProperties)
 multipart.enabled=true
 multipart.max-file-size=5120Mb
