*:neginx代理区域修改为可配置的

--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -65,6 +65,7 @@ nginxConf.io.serverAddr=unicom.bonc.com
 #nginxserver
 nginx.server.DMZ=dmz
 nginx.server.USER=user
+nginx.service.zone=dmz,dmz1,user
 
 #yum_source
 yumConf.io.address=10.161.48.112
