--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -110,7 +110,7 @@ login.showAuthCode=false
 
 #login sftp
 sftp.host=192.168.0.80
-sftp.user=debug
-sftp.password=debug
+sftp.user=root
+sftp.password=Docker
 #debug ssh
 ssh.host=http://192.168.0.75:4200/ssh
