*:修改prepare环境配置文件

--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -34,7 +34,13 @@ docker.io.apiVersion=1.21
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.29:5000/v1/
-docker.io.nodeUrl=tcp://192.168.0.26:28015,tcp://192.168.0.27:28015,tcp://192.168.0.28:28015,tcp://192.168.0.51:28015,tcp://192.168.0.52:28015,tcp://192.168.0.53:28015,
+docker.io.nodeUrl=tcp://192.168.0.26:28015,tcp://192.168.0.27:28015,tcp://192.168.0.28:28015,tcp://192.168.0.51:28015,tcp://192.168.0.52:28015,tcp://192.168.0.53:28015
+docker.io.node=centos-minion26=tcp://192.168.0.26:28015,centos-minion27=tcp://192.168.0.27:28015,centos-minion28=tcp://192.168.0.28:28015,centos-minion51=tcp://192.168.0.51:28015,centos-minion52=tcp://192.168.0.52:28015,centos-minion52=tcp://192.168.0.53:28015
+
+#docker registry()
+docker.registry.api.url=http://192.168.0.29:5000
+docker.registry.api.username=docker
+docker.registry.api.password=docker
 
 #docker save image
 docker.image.url=192.168.0.29:5000
@@ -44,12 +50,12 @@ docker.image.cmdpath=docker save -o
 kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
-kubernetes.api.startport=30020
+kubernetes.api.startport=30400
 kubernetes.api.endport=32750
 kubernetes.api.address=192.168.0.20
 
 #shera
-shera.api.endpoint=http://192.168.0.76:5000/v1/
+shera.api.endpoint=http://192.168.0.29:8282/
 
 #etcd
 etcd.client.url=http://192.168.0.26:2379
@@ -99,3 +105,10 @@ ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
 ratio.memtocpu=4
 #login authcode
 login.showAuthCode=false
+
+#login sftp
+sftp.host=192.168.0.80
+sftp.user=root
+sftp.password=Docker
+#debug ssh
+ssh.host=http://192.168.0.24:4200/ssh
