--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -35,7 +35,8 @@ docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.29:5000/v1/
 docker.io.nodeUrl=tcp://192.168.0.26:28015,tcp://192.168.0.27:28015,tcp://192.168.0.28:28015,tcp://192.168.0.51:28015,tcp://192.168.0.52:28015,tcp://192.168.0.53:28015
-docker.io.node=centos-minion26=tcp://192.168.0.26:28015,centos-minion27=tcp://192.168.0.27:28015,centos-minion28=tcp://192.168.0.28:28015,centos-minion51=tcp://192.168.0.51:28015,centos-minion52=tcp://192.168.0.52:28015,centos-minion52=tcp://192.168.0.53:28015
+docker.io.type=tcp
+docker.io.port=28015
 
 #docker registry()
 docker.registry.api.url=http://192.168.0.29:5000
@@ -107,7 +108,7 @@ ratio.memtocpu=4
 login.showAuthCode=false
 
 #login sftp
-sftp.host=192.168.0.80
+sftp.host=192.168.0.26
 sftp.user=root
 sftp.password=Docker
 #debug ssh
