*:修改prepare环境配置文件

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -64,7 +64,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=yz.local
+nginxConf.io.serverAddr=bonc.yz
 
 #nginxserver
 nginx.server.DMZ=dmz
