--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -43,10 +43,6 @@ docker.registry.api.url=http://192.168.0.29:5000
 docker.registry.api.username=docker
 docker.registry.api.password=docker
 
-#docker save image
-docker.image.url=192.168.0.29:5000
-docker.image.cmdpath=docker save -o
-
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
@@ -67,7 +63,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.40
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=unicom.bonc.com
+nginxConf.io.serverAddr=bonc.yz
 
 #nginxserver
 nginx.server.DMZ=dmz
