*:修改生产环境的配置文件

--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -27,18 +27,21 @@ ceph.ssh.mountpoint=/mnt/k8s/
 ceph.ssh.cephdir=/etc/ceph/
 
 #docker()
-docker.io.url=http://10.162.17.13:28015
+docker.io.url=tcp://10.162.17.13:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=10.162.17.13:30002
 docker.io.apiVersion=1.21
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://10.162.17.13:30002/v1/
-docker.io.nodeUrl=http://10.162.17.13:28015,http://10.162.16.123:28015,http://10.162.16.125:28015
+docker.io.nodeUrl=tcp://10.162.17.13:28015,tcp://10.162.16.123:28015,tcp://10.162.16.125:28015
+docker.io.type=tcp
+docker.io.port=28015
 
-#docker save image
-docker.image.url=10.162.17.13:30002
-docker.image.cmdpath=docker save -o
+#docker registry()
+docker.registry.api.url=http://10.162.17.13:30002
+docker.registry.api.username=docker
+docker.registry.api.password=docker
 
 #kubernetes()
 kubernetes.api.endpoint=http://10.162.17.13:8080/
@@ -49,7 +52,7 @@ kubernetes.api.endport=30600
 kubernetes.api.address=10.162.17.13
 
 #shera
-shera.api.endpoint=http://192.168.0.76:5000/v1/
+shera.api.endpoint=http://10.162.17.13:8282/
 
 #etcd
 etcd.client.url=http://10.162.16.123:2379
@@ -65,6 +68,7 @@ nginxConf.io.serverAddr=yz.local:8081
 #nginxserver
 nginx.server.DMZ=dmz
 nginx.server.USER=user
+nginx.service.zone=dmz,dmz1,user
 
 #yum_source
 yumConf.io.address=10.162.17.11
@@ -98,3 +102,10 @@ ceph.key=QVFBQ1U2aFg0M3JBQlJBQTlUd2dSdm9WbDhscHRHUzVOY3BqT2c9PQ==
 ratio.memtocpu=8
 #login authcode
 login.showAuthCode=false
+
+#login sftp
+sftp.host=192.168.0.80
+sftp.user=root
+sftp.password=Docker
+#debug ssh
+ssh.host=http://192.168.0.75:4200/ssh
