--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -69,16 +69,16 @@ es.io.host=192.168.50.3:8300
 es.io.cluster-name=bonc_docker
 
 #resource address
-resourceMmanage.address=http://coptest.bonc.yz/resreq/restlet/resourceArchive/showAllResource
+resourceMmanage.address=http://132.35.227.90/resreq/restlet/resourceArchive/showAllResource
 
 #cas sso
 cas.enable=false
-cas.server-logout-url=http://coptest.bonc.yz/cas/logout?service=http://coptest.bonc.yz/portal/
+cas.server-logout-url=http://132.35.227.90/cas/logout?service=http://132.35.227.90/portal/
 
 #cas client config
-cas.server-url-prefix=http://coptest.bonc.yz/cas
-cas.server-login-url=http://coptest.bonc.yz/cas/login
-cas.client-host-url=http://192.168.0.29:8080
+cas.server-url-prefix=http://132.35.227.90/cas
+cas.server-login-url=http://132.35.227.90/cas/login
+cas.client-host-url=http://192.168.0.29:8082
 
 #monitor
 monitor.url=http://192.168.0.26:30029
