--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -101,7 +101,7 @@ sftp.password=Docker
 #debug ssh
 ssh.host=http://192.168.0.75:4200/ssh
 
-net.api.endpoint=http://192.168.0.80:8282/
+net.api.endpoint=http://192.168.0.80:8282
 net.api.username=net
 net.api.password=net
 net.api.port=8282
