修改配置文件

--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -41,8 +41,8 @@ docker.io.port=28015
 #docker.log
 docker.log.tail=1000
 docker.log.size=524288
-docker.log.await=20
-docker.log.download=120
+docker.log.await=200
+docker.log.download=3600
 
 #docker registry()
 docker.registry.api.url=http://192.168.0.29:5000
@@ -87,6 +87,8 @@ cas.server-login-url=http://132.35.227.90/cas/login
 cas.client-host-url=http://192.168.0.29:8082
 
 #monitor
+monitor.k8s.namespace=kube-system
+monitor.k8s.service=monitoring-influxdb
 monitor.url=http://192.168.0.26:30029
 monitor.username=root
 monitor.password=root.123
