--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -41,8 +41,8 @@ docker.io.port=28015
 #docker.log
 docker.log.tail=1000
 docker.log.size=524288
-docker.log.await=20
-docker.log.download=120
+docker.log.await=200
+docker.log.download=3600
 
 #docker registry()
 docker.registry.api.url=http://10.162.17.13:30002
@@ -87,6 +87,8 @@ cas.server-login-url=http://10.161.35.65:1821/cas/login
 cas.client-host-url=http://10.162.17.13:30000
 
 #monitor
+monitor.k8s.namespace=kube-system
+monitor.k8s.service=monitoring-influxdb
 monitor.url=http://10.162.16.116:30004
 monitor.username=docker
 monitor.password=Fut0_Za3_Aj5
