修改配置文件

--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -57,23 +57,15 @@ kubernetes.api.startport=30400
 kubernetes.api.endport=32750
 kubernetes.api.address=10.162.22.108
 
-#shera
-shera.api.endpoint=http://192.168.0.76:8282/
-
 #etcd
 etcd.client.url=http://10.162.22.109:2379,http://10.162.22.110:2379,http://10.162.22.111:2379
 etcd.client.domain=cluster.local
 
 #nginxConf()
-nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=sudo nginx
-nginxConf.io.confurl=http://192.168.0.29
-nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=bonc.yz
+nginxConf.io=true
+nginxConf.io.serverAddr=yz.local:8080
 
 #nginxserver
-nginx.server.DMZ=dmz
-nginx.server.USER=user
 nginx.service.zone=dmz,dmz1,user
 
 #yum_source
@@ -88,8 +80,6 @@ resourceMmanage.address=http://132.35.227.90:1820/resreq/restlet/resourceArchive
 
 #cas sso
 cas.enable=true
-#cas.server-logout-url=http://132.35.227.90:1820/cas/logout?service=http://132.35.227.90:1820/portal/pure/Frame.action
-
 cas.server-logout-url=http://132.35.227.90:1820/cas/logout?service=http://132.35.227.90:1820/portal/
 
 #cas client config
@@ -107,7 +97,6 @@ monitor.dbName=k8s
 
 ceph.name=admin
 ceph.monitor=10.162.22.108:6789,10.162.22.109:6789,10.162.22.110:6789
-#ceph.key=AQCaYoBYFUFGORAAtZWn35Aa2z5BKC75xv9lyA==
 ceph.key=QVFDYVlvQllGVUZHT1JBQXRaV24zNUFhMno1QktDNzV4djlseUE9PQ==
 
 ratio.memtocpu=4
