--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -62,7 +62,8 @@ etcd.client.url=http://10.162.16.123:2379
 etcd.client.domain=cluster.local
 
 #nginxConf()
-nginxConf.io.serverAddr=yz.local:8081
+nginxConf.io=false
+nginxConf.io.serverAddr=http://10.245.2.222:80
 
 #nginxserver
 nginx.service.zone=dmz,dmz1,user
