--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -62,7 +62,8 @@ etcd.client.url=http://192.168.0.26:2379
 etcd.client.domain=cluster.local
 
 #nginxConf()
-nginxConf.io.serverAddr=bonc.yz
+nginxConf.io=false
+nginxConf.io.serverAddr=http://192.168.20.2:8080
 
 #nginxserver
 nginx.service.zone=dmz,dmz1,user
