--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
             <url>http://code.bonc.com.cn/nexus/content/groups/public</url>
         </repository>
     </repositories>
-    
+
 	<groupId>com.bonc.epm</groupId>
 	<artifactId>paas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -138,7 +138,7 @@
 	    <artifactId>poi</artifactId>
 	    <version>3.11</version>
     </dependency>
-		<!-- <dependency> <groupId>net.unicon.cas</groupId> <artifactId>cas-client-autoconfig-support</artifactId> 
+		<!-- <dependency> <groupId>net.unicon.cas</groupId> <artifactId>cas-client-autoconfig-support</artifactId>
 			<version>1.1.0-GA</version> </dependency> -->
         <dependency>
             <groupId>com.bonc</groupId>
@@ -191,6 +191,19 @@
             <artifactId>javatar</artifactId>
             <version>2.5</version>
         </dependency>
+
+    <!-- 引入cxf依赖（代） -->
+<!--     <dependency>
+    	<groupId>org.apache.cxf</groupId>
+    	<artifactId>cxf-rt-frontend-jaxws</artifactId>
+    	<version>3.1.6</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.apache.cxf</groupId>
+    	<artifactId>cxf-rt-transports-http</artifactId>
+    	<version>3.1.6</version>
+	</dependency>
+ -->
 	</dependencies>
 	<profiles>
 		<profile>
