--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -99,8 +99,8 @@ ceph.name=admin
 ceph.monitor=192.168.0.71:6789,192.168.0.72:6789,192.168.0.73:6789
 ceph.key=QVFCbzI3RlhWQWtWSWhBQWpoTC9sT1RFSGowb2U0VDR0Q0dWZlE9PQ==
 
-ratio.memtocpu=4
-ratio.limittorequestcpu=4
+#ratio.memtocpu=4
+ratio.limittorequestcpu=8
 ratio.limittorequestmemory=4
 #login authcode
 login.showAuthCode=false
