--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -99,8 +99,8 @@ monitor.password=Fut0_Za3_Aj5
 monitor.dbName=k8s
 
 
-ratio.memtocpu=1
-ratio.limittorequestcpu=4
+#ratio.memtocpu=1
+ratio.limittorequestcpu=8
 ratio.limittorequestmemory=4
 #login authcode
 login.showAuthCode=false
