--- a/pom.xml
+++ b/pom.xml
@@ -181,11 +181,11 @@
             <artifactId>etcd4j</artifactId>
             <version>2.12.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.slf4j</groupId> -->
+<!--             <artifactId>slf4j-simple</artifactId> -->
+<!--             <version>1.7.7</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>javatar</groupId>
             <artifactId>javatar</artifactId>
