--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -123,3 +123,7 @@ service.memory.size=2,4,8
 
 #entry cmd
 entry.host=10.162.17.13:8011
+
+#rest resource
+rest.resource.cpu = 4
+rest.resource.memory = 16
