--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -123,3 +123,7 @@ service.memory.size=2,4,8,16
 
 #entry cmd
 entry.host=192.168.0.90:8011
+
+#rest resource
+rest.resource.cpu = 4
+rest.resource.memory = 16
