--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -124,6 +124,16 @@ service.memory.size=2,4,8,16
 #entry cmd
 entry.host=192.168.0.90:8011
 
+#DNSMonitor
+monitor.image.name=192.168.0.29:5000/pingbox:v1
+monitor.command=monitor.sh
+monitor.frequency=60
+monitor.count=100
+mysql.host=192.168.0.90
+mysql.port=3306
+mysql.user=root
+mysql.password=123456
+mysql.dbname=epm_paas
 #rest resource
 rest.resource.cpu = 4
 rest.resource.memory = 16
