--- a/src/main/resources/application-prepare.properties
+++ b/src/main/resources/application-prepare.properties
@@ -124,6 +124,16 @@ service.memory.size=2,4,8
 #entry cmd
 entry.host=10.162.22.108:8011
 
+#DNSMonitor
+monitor.image.name=10.162.22.108:30003/pingbox:v1
+monitor.command=monitor.sh
+monitor.frequency=60
+monitor.count=100
+mysql.host=localhost
+mysql.port=3306
+mysql.user=root
+mysql.password=123456
+mysql.dbname=epm_paas
 #rest resource
 rest.resource.cpu = 4
 rest.resource.memory = 16
