--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 			<version>3.4.1</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.ceph</groupId>
 			<artifactId>rados</artifactId>
 			<version>0.3.0</version>
@@ -160,7 +160,7 @@
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
 			<version>4.1.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.ceph</groupId>
 			<artifactId>libcephfs</artifactId>
