--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -126,15 +126,8 @@ service.memory.size=4,8,16
 entry.host=192.168.0.76:8011
 
 #DNSMonitor
-monitor.image.name=192.168.0.76:5000/pingbox:v1
-monitor.command=monitor.sh
-monitor.frequency=60
-monitor.count=100
-mysql.host=192.168.0.76
-mysql.port=3306
-mysql.user=root
-mysql.password=123456
-mysql.dbname=epm_paas
+monitor.image.name=192.168.0.76:5000/busybox:latest
+monitor.name=dns-monitor
 #rest resource
 rest.resource.cpu = 4
 rest.resource.memory = 16
