--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -131,3 +131,9 @@ monitor.name=dns-monitor
 #rest resource
 rest.resource.cpu = 4
 rest.resource.memory = 16
+#redis
+redis.image=10.10.3.9:5000/redis
+redis.cpu.size=250m
+redis.explorer.image=10.10.3.9:5000/redis_exporter:latest
+redis.explorer.cpu.size=250m
+redis.explorer.memory.size=100Mi
